# modvm

./: .clang-format  CMakeLists.txt  README
firmware/: Makefile  boot.s
include/modvm/: bug.h  build_bug.h  bus.h  chardev.h  compiler.h  compiler_attributes.h  compiler_types.h  container_of.h  device.h  err.h  event_loop.h  irq.h  list.h  loader.h  log.h  machine.h  memory.h  once_lite.h  os_page.h  os_thread.h  vcpu.h  vm.h
include/modvm/backends/block/: posix.h
include/modvm/backends/char/: stdio.h
include/modvm/core/: accel.h  block.h  board.h  bus.h  character_device.h  chardev.h  ctxm.h  device.h  devm.h  devres.h  event_loop.h  hypervisor.h  interrupt_line.h  irq.h  loader.h  machine.h  memory.h  modvm.h  net.h  pci.h  res_pool.h  vcpu.h  virtual_cpu.h
include/modvm/hw/: serial.h
include/modvm/hw/boards/x86_64/: acpi_tables.h
include/modvm/hw/char/: serial.h
include/modvm/hw/misc/: debug_exit.h
include/modvm/hw/pci-host/: pio_bridge.h
include/modvm/hw/virtio/: virtio.h  virtio_blk.h  virtio_mmio.h  virtio_net.h  virtio_pci.h  virtqueue.h
include/modvm/internal/: loader.h  thread.h
include/modvm/internal/arch/x86/: regs.h
include/modvm/loader/: e820.h
include/modvm/os/: event_loop.h  page.h  thread.h
include/modvm/utils/: bug.h  build_bug.h  byteorder.h  cmdline.h  compiler-clang.h  compiler-context-analysis.h  compiler-gcc.h  compiler.h  compiler_types.h  container_of.h  err.h  list.h  log.h  once_lite.h  stddef.h  types.h
src/: CMakeLists.txt  main.c
src/accel/kvm/: internal.h  kvm_main.c  vcpu.c
src/accel/kvm/x86_64/: vcpu.c
src/arch/x86_64/: kvm_internal.h  kvm_vcpu.c  kvm_vm.c  machine_pc.c
src/backends/block/: posix_file.c
src/backends/char/: posix_stdio.c
src/backends/net/: linux_tap.c  posix_tap.c
src/core/: accel.c  block.c  board.c  bus.c  chardev.c  ctxm.c  device.c  device_class.c  device_registry.c  devm.c  devres.c  event_loop.c  hypervisor.c  internal.h  interrupt_line.c  irq.c  loader.c  log.c  machine.c  machine_class.c  machine_registry.c  memory.c  modvm.c  net.c  os_page_posix.c  os_thread_posix.c  pci.c  res_pool.c  vcpu.c
src/hw/boards/x86_64/: pc.c
src/hw/char/: chardev_stdio.c  serial_reg.h  uart_16550a.c
src/hw/misc/: debug_exit.c
src/hw/pci-host/: pio_bridge.c
src/hw/virtio/: virtio_blk.c  virtio_blk_reg.h  virtio_mmio.c  virtio_mmio_reg.h  virtio_net.c  virtio_net_reg.h  virtio_pci.c  virtio_pci_reg.h  virtqueue.c  virtqueue.h
src/hypervisor/kvm/: hypervisor.c  internal.h  kvm_main.c  vcpu.c  virtual_cpu.c
src/hypervisor/kvm/x86_64/: kvm_cpu.c  vcpu.c
src/loader/: e820.h  linux_x86.c  raw_x86.c
src/motherboard/x86_64/: pc.c
src/os/posix/: char_stdio.c  event_loop.c  page.c  thread.c
src/utils/: cmdline.c  log.c
tests/: CMakeLists.txt  test_board.c  test_infra.c  test_machine.c
